# hand-future-backend

./: .env.sample  .gitignore  config.py  db.py  final_data.json  log.py  main.py  path.py  pyproject.toml  readme.md  requirements.txt  run-hand-future-backend.sh  run-server-start.sh  session.py  start.sh
api/: data.py  ds.py  files.py  wechat.py
api/files/: __init__.py
api/hero/: __init__.py  ds.py  notion.py  router.py  settings.py  test_notion.py  utils.py
api/heroes2/: router.py
api/ld/: ds.py  ld_activities.py  ld_bills.py  ld_products.py  router.py
api/user/: ds.py  router.py  utils.py
api/works/: ds.py  router.py
daemon/: crawl_card.py
demo/: test_pydantic_alias.py
deprecated/: notion_crawl_DEPRECATED.py  test_notion.py
docs/: dev-notes.md
scripts/: genHeroesGraph.py  id2name.json  quoteAvatarInDB.py  unquoteFileNames.py  update_coll.py  validate_notion.py
src/api/: auth.py  files.py  hero.py  root.py  user.py  wechat.py  work.py  works.py
src/api/user/: router.py
src/config/: notion.py  rest.py
src/ds/: graph.py  hero.py  mongo.py  notion.py  user.py  work.py
src/libs/: auth.py  db.py  env.py  file.py  log.py  mail.py  path.py  rand.py  re.py  session.py
src/libs/wechat/: article.py  test_article.py
